--- a/app/src/main/res/layout/activity_device_detail.xml
+++ b/app/src/main/res/layout/activity_device_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,4 +7,49 @@
     android:background="#D1D0CE"
     tools:context=".DeviceDetailActivity">
 
-</android.support.constraint.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/messsge"
+            android:layout_width="330dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:background="@drawable/edittext_style"
+            android:backgroundTint="#D1D0CE"
+            android:textAlignment="center"
+            android:textSize="30dp"
+            />
+
+
+
+
+    <Button
+        android:id="@+id/buttondelete"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Delete account"
+        android:background="@drawable/button_edit"/>
+
+        <Button
+            android:id="@+id/buttonlogout"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="logout"
+            android:layout_margin="10dp"
+
+            android:background="@drawable/button_edit"/>
+
+
+
+
+
+    </LinearLayout>
+
+</RelativeLayout>
