--- a/app/src/main/res/layout/customlayout.xml
+++ b/app/src/main/res/layout/customlayout.xml
@@ -12,25 +12,37 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="122dp"
-        android:layout_height="100dp"
-        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
-        app:srcCompat="@drawable/edittext_style"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp"
-        />
+        android:id="@+id/edtImage"
+        android:layout_width="35pt"
+        android:layout_height="35pt"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        app:srcCompat="@drawable/edittext_style" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="530dp"
+        android:id="@+id/edtText"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:gravity="center"
-        android:layout_margin="30dp"
-        android:layout_toEndOf="@id/imageView"
-        android:layout_marginStart="0dp"
-        android:layout_alignTop="@id/imageView"
-        android:textStyle="bold"
-        android:textSize="25dp"/>
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="13dp"
+        android:layout_toEndOf="@+id/edtImage"
+        android:textAlignment="center"
+        android:textSize="18dp"
+        android:text="TextView" />
+
+    <TextView
+        android:id="@+id/edtBSSID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="56dp"
+        android:layout_toEndOf="@+id/edtImage"
+        android:textAlignment="center"
+        android:textSize="18dp"
+        android:text="TextView" />
+
 </RelativeLayout>
