--- a/app/src/main/res/layout/activity_device_detail.xml
+++ b/app/src/main/res/layout/activity_device_detail.xml
@@ -16,16 +16,20 @@
 
 
         <TextView
-            android:id="@+id/messsge"
-            android:layout_width="330dp"
+            android:id="@+id/txtC"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:background="@drawable/edittext_style"
-            android:backgroundTint="#D1D0CE"
-            android:textAlignment="center"
+            android:layout_marginTop="10dp"
             android:textSize="30dp"
-            />
+            android:hint="temp"/>
+
+        <TextView
+            android:id="@+id/txtF"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="30dp"
+            android:hint="temp"/>
 
 
 
